Created Navbar for Landing Page

--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="first-section">
+        <div class="navbar">
+             <div class="navbar-left">
+                <p id="header-logo">Header Logo</p>
+             </div>
+             <div class="navbar-right">
+                <ul style="list-style-type: none;">
+                    <li class="header"> header link one</li>
+                    <li class="header"> header link two</li>
+                    <li class="header"> header link three</li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
